# python-dvuploader

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build_cli.yml  codespell.yml  test-publish.yml  test.yml
dvuploader/: __init__.py  checksum.py  chunkstream.py  cli.py  config.py  directupload.py  dvuploader.py  file.py  nativeupload.py  packaging.py  utils.py
tests/: conftest.py
tests/fixtures/: cli_input.yaml  create_dataset.json
tests/fixtures/add_dir_files/__to_ignore_dir__/: subfile_in_ignore.txt
tests/fixtures/add_dir_files/subdir/: subfile.txt
tests/integration/: test_native_upload.py
tests/unit/: test_cli.py  test_directupload.py  test_file.py  test_native_upload.py  test_utils.py
