[tool.poetry]
name = "dvuploader"
version = "0.1.0"
description = "Python library for uploading (bulk) data to Dataverse"
authors = ["Jan Range"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
grequests = "^0.7.0"
joblib = "^1.3.2"
tqdm = "^4.66.1"
pydantic = "1.10"
requests = "^2.31.0"
dotted-dict = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
