[tool.poetry]
name = "dvuploader"
version = "0.2.3"
description = "Python library for uploading (bulk) data to Dataverse"
authors = ["Jan Range"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.5.3"
requests = "^2.31.0"
typer = "^0.9.0"
pyyaml = "^6.0.1"
aiohttp = "^3.9.1"
aiodns = "^3.1.1"
nest-asyncio = "^1.5.8"
aiofiles = "^23.2.1"
rich = "^13.7.0"
ipywidgets = "^8.1.1"

[tool.poetry.scripts]
dvuploader = "dvuploader.cli:app"

[tool.poetry.group.test.dependencies]
coverage = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["-v", "--cov=dvuploader"]
asyncio_mode = "auto"