[tool.poetry]
name = "dvuploader"
version = "0.3.0"
description = "Python library for uploading (bulk) data to Dataverse"
authors = ["Jan Range"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.3"
httpx = "^0.28"
typer = ">=0.9, <0.16"
pyyaml = "^6.0.1"
nest-asyncio = "^1.5.8"
aiofiles = "^23.2.1"
rich = "^13.7.0"
tenacity = "^8.3.0"

[tool.poetry.scripts]
dvuploader = "dvuploader.cli:app"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
codespell = "^2.2.6"
coverage = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
pytest-httpx = "^0.35.0"

[tool.poetry.group.jupyter.dependencies]
ipywidgets = "^8.1.1"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
pytest-httpx = "^0.35.0"

[tool.poetry.group.linting.dependencies]
codespell = "^2.2.6"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["-v", "--cov=dvuploader"]
asyncio_mode = "auto"
